--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,21 @@
-spotipy
+astroid==2.5.1
+autopep8==1.5.6
+boto3==1.17.39
+botocore==1.20.39
+certifi==2020.12.5
+chardet==4.0.0
+idna==2.10
+isort==5.7.0
+jmespath==0.10.0
+lazy-object-proxy==1.5.2
+mccabe==0.6.1
+pycodestyle==2.7.0
+pylint==2.7.2
+python-dateutil==2.8.1
+requests==2.25.1
+s3transfer==0.3.6
+six==1.15.0
+spotipy==2.17.1
+toml==0.10.2
+urllib3==1.26.4
+wrapt==1.12.1
